spec/tests/error/error-1.2.tcl
# Test: error with custom info
error "file not found" "in procedure open_file"
